--- a/0219/b_oop.ipynb
+++ b/0219/b_oop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "10"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "200"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "4"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "52"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "1000"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "990"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "15"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "Complex - [r: 1, i: 2]"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "'r: 1, i: 2'"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "2"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,16 +530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Car at 0x1cfb9e45be0>"
+       "<__main__.Car at 0x2a87f31dc10>"
       ]
      },
-     "execution_count": 595,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,16 +551,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'현재속도 100.'"
+       "'현재속도 20.'"
       ]
      },
-     "execution_count": 600,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,16 +571,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'현재속도 0.'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "car.speed_down()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 608,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +639,7 @@
        "200"
       ]
      },
-     "execution_count": 608,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,16 +651,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'현재속도 200.'"
+       "'현재속도 45.'"
       ]
      },
-     "execution_count": 629,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,16 +671,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'현재속도 110.'"
+       "'현재속도 0.'"
       ]
      },
-     "execution_count": 631,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,20 +691,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Car - [max_speed: 100, speed: 0]"
-      ]
-     },
-     "execution_count": 514,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# truck = Truck(0, 100)\n",
     "# truck"
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
