--- a/pandas_data_analysis/0223/a_pandas_class.ipynb
+++ b/pandas_data_analysis/0223/a_pandas_class.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "홍길동     85\n",
+       "김철수     70\n",
+       "이영희    100\n",
+       "최민수     90\n",
+       "박지성     55\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# index를 지정하지 않으면 0부터 시작하는 정수의 인덱스 값이 자동으로 생성됨\n",
     "scores = pd.Series([85, 70, 100, 90, 55], index=['홍길동', '김철수', '이영희', '최민수', '박지성'])\n",
@@ -65,18 +81,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['홍길동', '김철수', '이영희', '최민수', '홍길동'], dtype='object', name='이름')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores.index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 85,  70, 100,  90,  55], dtype=int64)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores.values"
    ]
@@ -91,9 +129,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "홍길동     85\n",
+       "김철수     70\n",
+       "이영희    100\n",
+       "최민수     90\n",
+       "홍길동     55\n",
+       "Name: 점수, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores.name = '점수'\n",
     "scores.index.name = '이름'\n",
@@ -102,9 +157,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "홍길동     85\n",
+       "김철수     70\n",
+       "이영희    100\n",
+       "최민수     90\n",
+       "홍길동     55\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores = pd.Series([85, 70, 100, 90, 55], index=['홍길동', '김철수', '이영희', '최민수', '홍길동'])\n",
     "scores"
@@ -121,34 +192,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "홍길동    34.0\n",
+       "김철수    28.0\n",
+       "이영희    40.0\n",
+       "최민수    36.0\n",
+       "홍길동    22.0\n",
+       "Name: 점수, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores * 0.4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "홍길동     True\n",
+       "김철수     True\n",
+       "이영희     True\n",
+       "최민수     True\n",
+       "홍길동    False\n",
+       "Name: 점수, dtype: bool"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores >= 60"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "홍길동    17.0\n",
+       "김철수    14.0\n",
+       "이영희    20.0\n",
+       "최민수    18.0\n",
+       "홍길동    11.0\n",
+       "Name: 점수, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores * 0.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,9 +279,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "김철수    170.0\n",
+       "박지성      NaN\n",
+       "이영희    190.0\n",
+       "최민수    160.0\n",
+       "홍길동    145.0\n",
+       "홍길동    115.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores + scores2"
    ]
@@ -176,9 +316,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ITPS\\AppData\\Local\\Temp\\ipykernel_13652\\1484481271.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  scores[1], scores['김철수'] # 인덱스, 값 둘다 접근 가능하나 값으로 접근이 좋은듯..\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(70, 70)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores[1], scores['김철수'] # 인덱스, 값 둘다 접근 가능하나 값으로 접근이 좋은듯.."
    ]
@@ -192,27 +351,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ITPS\\AppData\\Local\\Temp\\ipykernel_13652\\2844775243.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  scores[[0, 3, 1]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "홍길동    85\n",
+       "최민수    90\n",
+       "김철수    70\n",
+       "Name: 점수, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores[[0, 3, 1]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "홍길동    85\n",
+       "홍길동    55\n",
+       "최민수    90\n",
+       "김철수    70\n",
+       "Name: 점수, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores[['홍길동', '최민수', '김철수']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "홍길동    55\n",
+       "Name: 점수, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores[scores < 70]"
    ]
@@ -228,18 +439,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "김철수     70\n",
+       "이영희    100\n",
+       "Name: 점수, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores[1:3] # 마지막인덱스 포함 안함."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "김철수     70\n",
+       "이영희    100\n",
+       "최민수     90\n",
+       "Name: 점수, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores['김철수':'최민수'] # 마지막 인덱스값도 포함됨 - '최민수'"
    ]
@@ -254,9 +494,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    0\n",
+       "b    1\n",
+       "c    2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s0 = pd.Series(range(3), index=[\"a\", \"b\", \"c\"])\n",
     "s0"
@@ -264,18 +518,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s0.a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s0.b"
    ]
@@ -293,27 +569,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"이재용\" in scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"홍길동\" in scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "홍길동:85\n",
+      "김철수:70\n",
+      "이영희:100\n",
+      "최민수:90\n",
+      "홍길동:55\n"
+     ]
+    }
+   ],
    "source": [
     "for label, value in scores.items():\n",
     "  print(f'{label}:{value}')"
@@ -332,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +655,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +680,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,12 +701,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "이름\n",
        "권지용     NaN\n",
        "김철수   -20.0\n",
        "이영희     NaN\n",
@@ -407,7 +718,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,9 +738,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (5,) (4,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mscores\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mscores2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m \u001b[38;5;66;03m# 길이가 달라서 연산이 안됨\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,) (4,) "
+     ]
+    }
+   ],
    "source": [
     "scores.values + scores2.values # 길이가 달라서 연산이 안됨"
    ]
@@ -443,12 +766,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "이름\n",
        "권지용    False\n",
        "김철수     True\n",
        "이영희    False\n",
@@ -459,7 +783,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,19 +794,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "이름\n",
        "김철수   -20.0\n",
        "홍길동    25.0\n",
        "홍길동    -5.0\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,9 +826,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "권지용      NaN\n",
+       "김철수    120.0\n",
+       "이영희      NaN\n",
+       "이재용      NaN\n",
+       "최민수      NaN\n",
+       "홍길동     25.0\n",
+       "홍길동     -5.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "score_sums['김철수'] = 120\n",
     "score_sums"
@@ -511,9 +855,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "권지용      NaN\n",
+       "김철수    120.0\n",
+       "이영희      NaN\n",
+       "이재용      NaN\n",
+       "최민수      NaN\n",
+       "홍길동     25.0\n",
+       "홍길동     -5.0\n",
+       "남궁선    100.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "score_sums['남궁선'] = 100\n",
     "score_sums"
@@ -521,9 +885,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "권지용      NaN\n",
+       "김철수    120.0\n",
+       "이영희      NaN\n",
+       "최민수      NaN\n",
+       "홍길동     25.0\n",
+       "홍길동     -5.0\n",
+       "남궁선    100.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "del score_sums['이재용']\n",
     "score_sums"
@@ -531,9 +914,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름\n",
+       "권지용      NaN\n",
+       "김철수    120.0\n",
+       "이영희      NaN\n",
+       "홍길동     25.0\n",
+       "홍길동     -5.0\n",
+       "남궁선    100.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "score_sums.pop('최민수')\n",
     "score_sums"
@@ -541,12 +942,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "이름\n",
        "권지용      NaN\n",
        "김철수    120.0\n",
        "이영희      NaN\n",
@@ -554,7 +956,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +990,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +1014,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +1039,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +1062,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +1085,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +1106,7 @@
        "array([ -300,   500, -4000], dtype=int64)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
